# f8studio

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  README.md  conan_install.sh  conanfile.py  graph.json  launch_studio.cmd  main.py  mkdocs.yml  package.json  pixi.toml  pnpm-lock.yaml  pyproject.toml
.github/workflows/: cpp-quality.yml  dist-windows-manual.yml  dist-windows.yml  docs-pages.yml  docs-quality.yml  f8pystudio-quality.yml
api/: master.yaml  service.yaml
api/bindings/: NAMING.md  README.md
api/specs/: USAGE.md  master.yaml
api/specs/services/: README.md  engine.yaml
cla/: CCLA.md  ICLA.md
cmake/: deploy_service_runtime.cmake
conan_recipes/: install.sh
conan_recipes/gst_plugins_bad_recipe/: conandata.yml  conanfile.py
conan_recipes/gst_plugins_base_recipe/: conandata.yml  conanfile.py
conan_recipes/gst_plugins_good_recipe/: conandata.yml  conanfile.py
conan_recipes/libmpv_recipe/: conanfile.py
conan_recipes/ytdlp_recipe/: conanfile.py
docs/: LovenseLocalAPI.md  LovenseMockServer.md  editor.md  engine.md  graph-compiler.md  gstreamer_webrtc.md  index.md  requirements.txt  shm_formats.md
docs/design/: README.md  editor.md  graph-compiler.md  pysdk-runtime.md
docs/flows/: README.md  connect-recover.md  lifecycle.md
docs/getting-started/: install-deploy.md  runner.md  studio.md
docs/modules/: index.md
docs/modules/manual/: f8-audiocap.md  f8-audiofeat-core.md  f8-audiofeat-rhythm.md  f8-cvkit-denseoptflow.md  f8-cvkit-templatematch.md  f8-cvkit-tracking.md  f8-cvkit-videostab.md  f8-dl-classifier.md  f8-dl-detector.md  f8-dl-humandetector.md  f8-dl-optflow.md  f8-dl-tcnwave.md  f8-implayer.md  f8-mp-pose.md  f8-pyengine.md  f8-pyexpr.md  f8-pyscript.md  f8-screencap.md
docs/modules/services/: f8-audiocap.md  f8-audiofeat-core.md  f8-audiofeat-rhythm.md  f8-cvkit-denseoptflow.md  f8-cvkit-templatematch.md  f8-cvkit-tracking.md  f8-cvkit-videostab.md  f8-dl-classifier.md  f8-dl-detector.md  f8-dl-humandetector.md  f8-dl-optflow.md  f8-dl-tcnwave.md  f8-implayer.md  f8-mp-pose.md  f8-pyengine.md  f8-pyexpr.md  f8-pyscript.md  f8-screencap.md
docs/roles/: README.md  master_role.md  service_role.md  webclient_role.md
docs/scenarios/: index.md  scene-01-cvkit_template_tracking.md  scene-01-offline-video-tracking.md  scene-02-desktop-live-tracking.md  scene-02-gamemod_skeleton.md  scene-03-audio_driven.md  scene-03-realtime-pose-control.md  scene-04-functional_tcode.md  scene-04-motion-first-auto-tracking.md
docs/scenarios/scripts/: motion_selector.py  scene-01-cvkit_template_tracking.json  scene-02-gamemod_skeleton.json  scene-03-audio_driven.json  scene-04-functional_tcode.json
docs/services/: engine.md
profiles/: README.md
profiles/examples/: web-only.json  web-plus-daemon.json
profiles/schema/: profile.schema.json
schemas/: README.md  codegen.sh  common.schema.json  data.schema.json  edge.schema.json  operator.schema.json  protocol.yml  service.schema.json  specs.schema.json
scripts/: README.md  audioshm_viewer.py  bench_dl_baseline.py  build_studio_exe.py  build_studio_launcher.py  check_docs_links.py  check_docs_nav.py  collaborative_graph.py  cpp_ci.py  dist_ci.py  engine_executor_demo.py  f8studio_launcher.py  format_cpp.ps1  gen_cpp_protocol_models.py  generate_service_docs.py  http-gateway.mjs  lovense-mock-server.js  run_audiocap.ps1  run_cpp_service.py  run_gst_webrtc_probe.ps1  run_implayer.ps1  run_webrtc_gateway.ps1  run_webrtc_gateway_video_test.ps1  service_runtime_demo.py  shm_video_dump.py  udp_skeleton_dump.py  udp_skeleton_stub.py  update_static_describes.py  validate-edge.mjs  validate-operator.mjs  validate-service.mjs  videoshm_motion_saliency_viewer.py  videoshm_viewer.py  webrtc_gateway_set_state.ps1  webrtc_gateway_test.py  webrtc_gateway_video_test.py
scripts/prototype/: ipc-bus.js  run-multi.js  run-nats.js  sim.js  web-ui.js
scripts/prototype/public/: index.html
services/engine/: service.json
services/f8/audiocap/: service.linux.yml  service.win.yml  service.yml
services/f8/audiofeat/core/: service.yml
services/f8/audiofeat/rhythm/: service.yml
services/f8/cvkit/dense_optflow/: service.linux.yml  service.win.yml  service.yml
services/f8/cvkit/template_match/: service.linux.yml  service.win.yml  service.yml
services/f8/cvkit/tracking/: service.linux.yml  service.win.yml  service.yml
services/f8/cvkit/video_stab/: service.linux.yml  service.win.yml  service.yml
services/f8/detect_tracker/: service.yml
services/f8/detect_tracker/weights/: yolo26n-pose.yaml
services/f8/dl/classifier/: service.yml
services/f8/dl/detector/: service.yml
services/f8/dl/detector_cpp/: service.yml
services/f8/dl/humandetector/: service.yml
services/f8/dl/optflow/: service.yml
services/f8/dl/tcnwave/: service.yml
services/f8/dl/weights/: FunGen-12s-pov-1.1.0.yaml  README.md  deepfungen_conv_tcn_49.yaml  deepfungen_conv_tcn_56.yaml  deepfungen_conv_tcn_62.yaml  deepfungen_vr_conv_tcn_8.yaml  erax_nsfw_yolo11n.yaml  neuflow_mixed.yaml  neuflow_sintel.yaml  neuflow_things.yaml  nudenet-320n.yaml  yolo26n-pose.yaml
services/f8/engine/: service.yml
services/f8/implayer/: service.linux.yml  service.win.yml  service.yml
services/f8/mp/pose/: service.yml
services/f8/onnx_tracker/: service.yml
services/f8/pyexpr/: service.yml
services/f8/pyscript/: service.yml
services/f8/screencap/: service.linux.yml  service.win.yml  service.yml
services/f8/studio/: service.yml
services/f8/template_tracker/: service.yml
services/f8/webrtc_gateway/: service.yml
services/player/: operators.json  service.json
services/svc.feel8.editor/: operators.yml  service.yml
services/svc.feel8.engine/: operators.yml  service.yml
tests/: CMakeLists.txt  test_docs_validators.py  test_generate_service_docs.py  test_main_thread_queue.cpp  test_protocol_models_parse.cpp  test_rungraph_routes.cpp  test_service_bus_integration.cpp  test_shm_region_lifetime.cpp
tests/contract/: README.md
tests/integration/: README.md
(+3 files in other folders)
