[project]
name = "f8studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datamodel-code-generator>=0.50.0",
    "f8pyengineqt",
    "f8pysdk",
    "fastapi>=0.128.0",
    "nats-py>=2.12.0",
    "pycrdt>=0.12.44",
    "qasync>=0.28.0",
]

[tool.uv.workspace]
members = [
    "packages/pyenginedpg",
    "packages/pyengineqt",
    "packages/pysdk",
]

[tool.uv.sources]
f8enginedpg = { workspace = true, editable = true }
f8pyengineqt = { workspace = true, editable = true }
f8pysdk = { workspace = true, editable = true }
