[project]
name = "f8studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "f8pysdk",
    "f8pystudio",
    "f8pyengine",
]

[tool.uv.workspace]
members = [
    "packages/f8pysdk",
    "packages/f8pystudio",
    "packages/f8pyengine",
]

[tool.uv.sources]
f8pysdk = { workspace = true, editable = true }
f8pystudio = { workspace = true, editable = true }
f8pyengine = { workspace = true, editable = true }
