[project]
name = "f8studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "f8pysdk",
    "f8pystudio",
    "f8pyengine",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.90",
    "websockets>=16.0",
    "aiortc>=1.14.0",
]

[tool.uv.workspace]
members = [
    "packages/f8pysdk",
    "packages/f8pystudio",
    "packages/f8pyengine",
]

[tool.uv.sources]
f8pysdk = { workspace = true, editable = true }
f8pystudio = { workspace = true, editable = true }
f8pyengine = { workspace = true, editable = true }
